# qforensics

./: README.md  pyproject.toml
src/qforensics/: application.py  window.py
src/qforensics/handler/: __init__.py  ewfhandler.py
src/qforensics/model/: __init__.py  artifactmodel.py  browsermodel.py  evidencemodel.py
src/qforensics/type/: io.py  tree.py  tskwrapper.py
src/qforensics/widget/: __init__.py  container.py  hexviewer.py  hiveviewer.py  photoviewer.py  sccaviewer.py  textviewer.py
styles/: dark.qss  windows.qss
